...
  onSearchQueryChange,
}) => {
  const insets = useSafeAreaInsets()
  const { isDark } = useTheme()

  const { handleScroll } = useScrollableHeader({
    children: <NavBarTitle>Currency</NavBarTitle>,
  })

  const LargeHeader = (
    <View paddingTop={'$3'} paddingHorizontal={'$4'}>
      <LargeHeaderTitle>Currency</LargeHeaderTitle>
    </View>
  )

  const SearchBarComponent = (
    <View paddingHorizontal={'$4'} paddingVertical={'$2'} backgroundColor={isDark ? '$background' : '$backgroundPaper'}>
      <SafeSearchBar placeholder="Search" onSearch={onSearchQueryChange} />
    </View>
  )

  return (
    <View flex={1}>
      <ScrollView
...
