...
                          headerBackButtonDisplayMode: 'minimal',
                          headerShadowVisible: false,
                          headerLeft: (props) => (
                            <HeaderBackButton
                              {...props}
                              tintColor="$color"
                              testID={'go-back'}
                              onPress={navigation.goBack}
                              displayMode={'minimal'}
                            />
                          ),
                        })}
                      >
...
                        <Stack.Screen name="pending-transactions" options={{ headerShown: true, title: '' }} />
                        <Stack.Screen name="notifications" options={{ headerShown: true, title: '' }} />

                        <Stack.Screen name="signers" options={{ headerShown: false }} />
                        <Stack.Screen name="import-signers" options={{ headerShown: false }} />

                        <Stack.Screen name="app-settings" options={{ headerShown: true, title: 'Settings' }} />
                        <Stack.Screen
                          name="accounts-sheet"
                          options={{
                            headerShown: false,
                            presentation: 'transparentModal',
                            animation: 'fade',
...
