...
  }, [preciseFiat])

  return (
    <View flexDirection="row" alignItems="center" testID={'fiat-balance-display'}>
      {precise ? (
        <XStack>
          <H2 fontWeight={'600'} alignSelf={'flex-end'} marginBottom={'$2'} fontSize={27} testID="fiat-balance-symbol">
            {symbol}
          </H2>
          <H1 fontWeight="600">{whole}</H1>
          {decimals && (
            <H1 fontWeight={600} color="$textSecondaryDark">
              {decimals}
...
